@@ -506,6 +506,7 @@ Simon Johnston
 Matt Joiner
 Thomas Jollans
 Nicolas Joly
+Brian K. Jones
 Evan Jones
 Jeremy Jones
 Richard Jones
